--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Find your train!
-  h3 Announcement: Sha eba nekoi ama nema da kaja koi e ta sichki da sa nadate!
+  h3 Announcement: (.)(.) !
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
