--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Find your train!
-  h3 Announcement: New announcment!
+  h3 Announcement: New announcment22!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
